--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<h1>Hello, GitHub Pages!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Participant Information</title>
+</head>
+<body>
+  <h1>Participant Information</h1>
+  <form id="participantForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" required>
+
+    <label for="gender">Gender:</label>
+    <select id="gender" name="gender" required>
+      <option value="">Select</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
+    </select>
+
+    <label for="race">Race:</label>
+    <select id="race" name="race" required>
+      <option value="">Select</option>
+      <option value="american-indian">American Indian or Alaskan Native</option>
+      <option value="asian-pacific-islander">Asian / Pacific Islander</option>
+      <option value="black-african-american">Black or African American</option>
+      <option value="hispanic">Hispanic</option>
+      <option value="white-caucasian">White / Caucasian</option>
+      <option value="multiple-other">Multiple ethnicity/ Other (please specify)</option>
+    </select>
+
+    <label for="otherRace">Other Race:</label>
+    <input type="text" id="otherRace" name="otherRace">
+
+    <label for="trustRating">Trust Rating:</label>
+    <input type="number" id="trustRating" name="trustRating" min="1" max="10" required>
+
+    <input type="submit" value="Submit">
+  </form>
+
+  <script>
+    document.getElementById('participantForm').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent form submission
+
+      // Get form values
+      var name = document.getElementById('name').value;
+      var age = document.getElementById('age').value;
+      var gender = document.getElementById('gender').value;
+      var race = document.getElementById('race').value;
+      var otherRace = document.getElementById('otherRace').value;
+      var trustRating = document.getElementById('trustRating').value;
+
+      // Check if Other Race is selected and has a value
+      if (race === 'multiple-other' && otherRace.trim() === '') {
+        alert('Please specify the Other Race.');
+        return;
+      }
+
+      // TODO: Send form data to backend for storage
+
+      // Reset the form
+      document.getElementById('participantForm').reset();
+    });
+  </script>
+</body>
+</html>
