--- a/index.html
+++ b/index.html
@@ -31,20 +31,27 @@
     <input type="submit" value="Submit">
   </form>
 
-  <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
+  <!-- Include the Firebase JavaScript SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+
   <script>
-    // Initialize Firebase
+    // Initialize Firebase with your configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
       authDomain: "statpsych-9ff2a.firebaseapp.com",
+      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
       projectId: "statpsych-9ff2a",
       storageBucket: "statpsych-9ff2a.appspot.com",
       messagingSenderId: "920441366178",
       appId: "1:920441366178:web:bb36fe038d209458bc99fb",
       measurementId: "G-RW90TV8H9W"
     };
+
     firebase.initializeApp(firebaseConfig);
+
+    // Get a reference to the Firebase database
+    const database = firebase.database();
 
     document.getElementById("registrationForm").addEventListener("submit", function(event) {
       event.preventDefault();
@@ -56,19 +63,22 @@
       var race = document.getElementById("race").value;
       var period = document.getElementById("period").value;
 
-      // Save participant registration data to Firebase database
-      firebase.database().ref("participants").push({
+      // Store the participant data in Firebase
+      database.ref("participants").push().set({
         name: name,
         age: age,
         gender: gender,
         race: race,
         period: period
+      })
+      .then(function() {
+        // Redirect to the trust rating questions page for the specific period
+        window.location.href = "trust-rating.html?period=" + period;
+      })
+      .catch(function(error) {
+        console.log("Error storing participant data:", error);
       });
-
-      // Redirect to the trust rating questions page for the specific period
-      window.location.href = "trust-rating.html?name=" + name + "&period=" + period;
     });
   </script>
 </body>
 </html>
-
