--- a/trust-rating.html
+++ b/trust-rating.html
@@ -67,6 +67,7 @@
       input.type = "number";
       input.min = 1;
       input.max = 10;
+      input.id = "rating" + i;
       input.required = true;
 
       const lineBreak = document.createElement("br");
