--- a/trust-rating.html
+++ b/trust-rating.html
@@ -19,8 +19,15 @@
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
   <script>
     // Initialize Firebase with your configuration
-    const firebaseConfig = {
-      // Add your Firebase configuration here
+   const firebaseConfig = {
+      apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
+      authDomain: "statpsych-9ff2a.firebaseapp.com",
+      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
+      projectId: "statpsych-9ff2a",
+      storageBucket: "statpsych-9ff2a.appspot.com",
+      messagingSenderId: "920441366178",
+      appId: "1:920441366178:web:bb36fe038d209458bc99fb",
+      measurementId: "G-RW90TV8H9W"
     };
 
     firebase.initializeApp(firebaseConfig);
