--- a/index.html
+++ b/index.html
@@ -83,5 +83,7 @@
       }
     });
   </script>
+  
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 </body>
 </html>
