--- a/index.html
+++ b/index.html
@@ -6,27 +6,7 @@
 <body>
   <h1>Participant Registration</h1>
   <form id="registrationForm">
-    <label for="name">Name:</label>
-    <input type="text" id="name" required><br><br>
-
-    <label for="age">Age:</label>
-    <input type="number" id="age" required><br><br>
-
-    <label for="gender">Gender:</label>
-    <input type="text" id="gender" required><br><br>
-
-    <label for="race">Race/Ethnicity:</label>
-    <select id="race" required>
-      <option value="American Indian or Alaskan Native">American Indian or Alaskan Native</option>
-      <option value="Asian / Pacific Islander">Asian / Pacific Islander</option>
-      <option value="Black or African American">Black or African American</option>
-      <option value="Hispanic">Hispanic</option>
-      <option value="White / Caucasian">White / Caucasian</option>
-      <option value="Multiple ethnicity/ Other">Multiple ethnicity/ Other (please specify)</option>
-    </select><br><br>
-
-    <label for="period">Period:</label>
-    <input type="number" id="period" min="1" max="10" required><br><br>
+    <!-- form fields -->
 
     <input type="submit" value="Submit">
   </form>
@@ -34,18 +14,12 @@
   <!-- Include the Firebase JavaScript SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   
   <script>
     // Initialize Firebase with your configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
-      authDomain: "statpsych-9ff2a.firebaseapp.com",
-      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
-      projectId: "statpsych-9ff2a",
-      storageBucket: "statpsych-9ff2a.appspot.com",
-      messagingSenderId: "920441366178",
-      appId: "1:920441366178:web:bb36fe038d209458bc99fb",
-      measurementId: "G-RW90TV8H9W"
+      // your Firebase config
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -53,37 +27,56 @@
     // Get a reference to the Firebase database
     const database = firebase.database();
 
-    document.getElementById("registrationForm").addEventListener("submit", async function(event) {
+    // Add your form submission and participant data storage logic here
+    document.getElementById("registrationForm").addEventListener("submit", function(event) {
       event.preventDefault();
 
       // Retrieve form values
-      const name = document.getElementById("name").value;
-      const age = document.getElementById("age").value;
-      const gender = document.getElementById("gender").value;
-      const race = document.getElementById("race").value;
-      const period = document.getElementById("period").value;
+      var name = document.getElementById("name").value;
+      var age = document.getElementById("age").value;
+      var gender = document.getElementById("gender").value;
+      var race = document.getElementById("race").value;
+      var period = document.getElementById("period").value;
 
-      try {
-        // Store the participant data in Firebase
-        const user = firebase.auth().currentUser;
-        const token = await user.getIdToken();
-
-        await firebase.database().ref("statpsych-9ff2a/participants").push().set({
-          name: name,
-          age: age,
-          gender: gender,
-          race: race,
-          period: period
-        }, { headers: { Authorization: `Bearer ${token}` } });
-
-        // Redirect to the trust rating questions page for the specific period
-        window.location.href = "trust-rating.html?period=" + period;
-      } catch (error) {
-        console.log("Error storing participant data:", error);
+      // Check if the user is authenticated
+      const user = firebase.auth().currentUser;
+      if (user) {
+        // User is authenticated, proceed with storing participant data
+        
+        // Retrieve the ID token
+        user.getIdToken()
+          .then(function(token) {
+            // Perform the write operation, including the authentication token in the request
+            firebase.database()
+              .ref("participants")
+              .push()
+              .set(
+                {
+                  name: name,
+                  age: age,
+                  gender: gender,
+                  race: race,
+                  period: period
+                },
+                { headers: { Authorization: `Bearer ${token}` } }
+              )
+              .then(() => {
+                console.log("Write operation successful");
+                // Redirect to the trust rating questions page for the specific period
+                window.location.href = "trust-rating.html?period=" + period;
+              })
+              .catch((error) => {
+                console.error("Error storing participant data:", error);
+              });
+          })
+          .catch(function(error) {
+            console.error("Error retrieving ID token:", error);
+          });
+      } else {
+        // User is not authenticated, handle accordingly
+        console.log("User is not authenticated");
       }
     });
   </script>
-  
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 </body>
 </html>
