--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
   <script>
     // Initialize Firebase with your configuration
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DATABASE_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID"
+      apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
+      authDomain: "statpsych-9ff2a.firebaseapp.com",
+      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
+      projectId: "statpsych-9ff2a",
+      storageBucket: "statpsych-9ff2a.appspot.com",
+      messagingSenderId: "920441366178",
+      appId: "1:920441366178:web:bb36fe038d209458bc99fb",
+      measurementId: "G-RW90TV8H9W"
     };
 
     firebase.initializeApp(firebaseConfig);
