--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
   </form>
 
   <!-- Include the Firebase JavaScript SDK -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.2/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.2/firebase-auth.js"></script>
   
   <script>
     // Initialize Firebase with your configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
-      authDomain: "statpsych-9ff2a.firebaseapp.com",
-      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
-      projectId: "statpsych-9ff2a",
-      storageBucket: "statpsych-9ff2a.appspot.com",
-      messagingSenderId: "920441366178",
-      appId: "1:920441366178:web:bb36fe038d209458bc99fb",
-      measurementId: "G-RW90TV8H9W"
+      apiKey: "<YOUR_API_KEY>",
+      authDomain: "<YOUR_AUTH_DOMAIN>",
+      databaseURL: "<YOUR_DATABASE_URL>",
+      projectId: "<YOUR_PROJECT_ID>",
+      storageBucket: "<YOUR_STORAGE_BUCKET>",
+      messagingSenderId: "<YOUR_MESSAGING_SENDER_ID>",
+      appId: "<YOUR_APP_ID>",
+      measurementId: "<YOUR_MEASUREMENT_ID>"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -81,41 +81,24 @@
           // User creation successful
           var user = userCredential.user;
 
-          // Retrieve the ID token
-          user.getIdToken()
-        .then(function(token) {
-          // Perform the write operation, including the authentication token in the request
+          // Perform the write operation
           firebase.database()
-            .ref("participants")
-            .push()
-            .set(
-              {
-                name: name,
-                age: age,
-                gender: gender,
-                race: race,
-                period: period
-              },
-              { headers: { Authorization: `Bearer ${token}` } }
-            )
-            .then(() => {
-              console.log("Write operation successful");
-              // Redirect to the trust rating questions page for the specific period
-              window.location.href = "trust-rating.html?period=" + period;
-            })
-            .catch((error) => {
-              console.error("Error storing participant data:", error);
-            });
-        })
-        .catch(function(error) {
-          console.error("Error retrieving ID token:", error);
-        });
-    })
-    .catch(function(error) {
-      console.error("Error creating user:", error);
-    });
-});
-  </script>
-</body>
-</html>
-```
+           
+// Perform the write operation
+firebase.database()
+  .ref("participants")
+  .push({
+    name: name,
+    age: age,
+    gender: gender,
+    race: race,
+    period: period
+  })
+  .then(() => {
+    console.log("Write operation successful");
+    // Redirect to the trust rating questions page for the specific period
+    window.location.href = "trust-rating.html?period=" + period;
+  })
+  .catch((error) => {
+    console.error("Error storing participant data:", error);
+  });
