--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
   </form>
 
   <!-- Include the Firebase JavaScript SDK -->
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   
   <script>
     // Initialize Firebase with your configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDCQsvxFwCd7MYoTd_sX_hBLm1qaAXKYCE",
-      authDomain: "statpsych-9ff2a.firebaseapp.com",
-      databaseURL: "https://statpsych-9ff2a-default-rtdb.firebaseio.com",
-      projectId: "statpsych-9ff2a",
-      storageBucket: "statpsych-9ff2a.appspot.com",
-      messagingSenderId: "920441366178",
-      appId: "1:920441366178:web:bb36fe038d209458bc99fb",
-      measurementId: "G-RW90TV8H9W"
+      apiKey: "<your-api-key>",
+      authDomain: "<your-auth-domain>",
+      databaseURL: "<your-database-url>",
+      projectId: "<your-project-id>",
+      storageBucket: "<your-storage-bucket>",
+      messagingSenderId: "<your-messaging-sender-id>",
+      appId: "<your-app-id>",
+      measurementId: "<your-measurement-id>"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -83,22 +83,28 @@
 
           // Perform the write operation
           firebase.database()
-           
-// Perform the write operation
-firebase.database()
-  .ref("participants")
-  .push({
-    name: name,
-    age: age,
-    gender: gender,
-    race: race,
-    period: period
-  })
-  .then(() => {
-    console.log("Write operation successful");
-    // Redirect to the trust rating questions page for the specific period
-    window.location.href = "trust-rating.html?period=" + period;
-  })
-  .catch((error) => {
-    console.error("Error storing participant data:", error);
-  });
+        .ref("participants")
+        .push({
+          name: name,
+          age: age,
+          gender: gender,
+          race: race,
+          period: period
+        })
+        .then(() => {
+          console.log("Write operation successful");
+          // Redirect to the trust rating questions page for the specific period
+          window.location.href = "trust-rating.html?period=" + period;
+        })
+        .catch((error) => {
+          console.error("Error storing participant data:", error);
+        });
+    })
+    .catch(function(error) {
+      console.error("Error creating user:", error);
+    });
+});
+  </script>
+</body>
+</html>
+```
